# transfermarkt-api

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  fly.toml  main.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: check.yml  checker.yml  fly.yml  ruff.yml  tests.yml
app/: api.py  main.py  settings.py
app/api/: api.py
app/api/endpoints/: clubs.py  competitions.py  players.py
app/schemas/: base.py  clubs.py  competitions.py
app/schemas/clubs/: __init__.py  players.py  profile.py  search.py
app/schemas/competitions/: __init__.py  clubs.py  search.py
app/schemas/players/: __init__.py  achievements.py  injuries.py  jersey_numbers.py  market_value.py  profile.py  search.py  stats.py  transfers.py
app/services/: base.py  market_value.py  players.py  search.py  transfers.py
app/services/clubs/: players.py  profile.py  search.py  staff.py
app/services/commons/: search.py
app/services/competitions/: clubs.py  search.py
app/services/players/: achievements.py  injuries.py  jersey_numbers.py  market_value.py  profile.py  search.py  squadnumbers.py  stats.py  transfers.py
app/utils/: regex.py  utils.py  xpath.py
tests/: conftest.py
tests/clubs/: test_clubs_players.py  test_clubs_profile.py  test_clubs_search.py
tests/competitions/: test_competitions_clubs.py  test_competitions_search.py
tests/data/clubs/players/: 131_2010.json  131_None.json  210_2017.json  27_2019.json  31_2018.json  5_2003.json
tests/data/clubs/profile/: 131.json  210.json  27.json  31.json  5.json
tests/data/clubs/search/: Barcelona.json  Bayern.json  Grêmio.json  Liverpool.json  Milan.json
tests/data/competitions/clubs/: BRA1.json  ES1.json  GB1.json
tests/data/competitions/search/: Brasileirão.json  La Liga.json  Premier League.json
tests/data/players/achievements/: 28003.json  3373.json  68290.json  8198.json
tests/data/players/injuries/: 28003.json  3373.json  68290.json  8198.json
tests/data/players/jersey_numbers/: 28003.json  3373.json  68290.json  8198.json
tests/data/players/market_value/: 28003.json  3373.json  68290.json  8198.json
tests/data/players/profile/: 28003.json  3373.json  68290.json  8198.json
tests/data/players/search/: Cristiano.json  Messi.json  Neymar.json  Ronaldo.json
tests/data/players/stats/: 28003.json  3373.json  68290.json  8198.json
tests/data/players/transfers/: 28003.json  3373.json  68290.json  8198.json
tests/players/: test_players_achievements.py  test_players_injuries.py  test_players_market_value.py  test_players_profile.py  test_players_search.py  test_players_stats.py  test_players_transfers.py
tests/services/: test_clubs.py  test_competitions.py  test_players.py
transfermarkt_api/services/: players.py
transfermarkt_api/utils/: utils.py  xpath.py
