[tool.poetry]
name = "transfermarkt-api"
version = "2.0.3"
description = "API service to get data from Transfermarkt"
authors = ["Felipe Allegretti <felipe@allegretti.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
lxml = "==4.9.3"
beautifulsoup4 = "==4.12.2"
requests = "==2.31.0"
fastapi = "==0.104.0"
uvicorn = {extras = ["standard"], version = "==0.23.2"}
slowapi = "==0.1.8"
pydantic-settings = "==2.1.0"

[tool.poetry.group.dev.dependencies]
jupyter = "==1.0.0"
setuptools = "==68.2.2"

[tool.poetry.group.check.dependencies]
black = "==23.1.0"
ruff = "==0.0.275"
interrogate = "==1.5.0"

[tool.poetry.group.tests.dependencies]
pytest = "==7.3.1"
pytest-cov = "==4.1.0"
schema = "==0.7.5"

[tool.black]
line-length = 120
verbose = true
preview = true

[tool.ruff]
line-length = 120
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "N",  # pep8-naming
    "COM",  # flake8-commas
    "Q",  # flake8-quotes
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --exitfirst"
testpaths = [
    "tests",
]

[tool.interrogate]
ignore-init-module = true
ignore-module = true
fail-under = 100