[tool.poetry]
name = "transfermarkt-api"
version = "3.0.0"
description = "API service to get data from Transfermarkt"
authors = ["Felipe Allegretti <felipe@allegretti.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "==5.3.0"
beautifulsoup4 = "==4.12.3"
requests = "==2.32.3"
fastapi = "==0.115.5"
uvicorn = {extras = ["standard"], version = "==0.32.0"}
slowapi = "==0.1.9"
pydantic-settings = "==2.6.1"
pydantic= "==2.8.2"

[tool.poetry.group.dev.dependencies]
jupyter = "==1.0.0"
setuptools = "==68.2.2"

[tool.poetry.group.check.dependencies]
black = "==24.8.0"
ruff = "==0.6.1"
interrogate = "==1.7.0"

[tool.poetry.group.tests.dependencies]
pytest = "==7.3.1"
pytest-cov = "==4.1.0"
schema = "==0.7.5"

[tool.black]
line-length = 120
verbose = true
preview = true

[tool.ruff]
preview = true
unsafe-fixes = true
line-length = 120
lint.select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "COM",  # flake8-commas
    "Q",  # flake8-quotes
    "FAST",  # fastapi
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --exitfirst"
testpaths = [
    "tests",
]

[tool.interrogate]
ignore-init-module = true
ignore-module = true
fail-under = 100